[gd_scene load_steps=5 format=2]

[ext_resource path="res://Audio/Soundtrack/nightmare_theme.ogg" type="AudioStream" id=1]
[ext_resource path="res://Audio/Soundtrack/intro.ogg" type="AudioStream" id=2]
[ext_resource path="res://Audio/Soundtrack/preverse.ogg" type="AudioStream" id=3]
[ext_resource path="res://Audio/Soundtrack/MusicPlayer.gd" type="Script" id=4]

[node name="MusicPlayer" type="Node"]
pause_mode = 2
script = ExtResource( 4 )

[node name="IntroMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -14.0
bus = "Soundtrack"

[node name="PreVerseMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -14.0
bus = "Soundtrack"

[node name="NightmareMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -14.0
bus = "Soundtrack"
